--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
     "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3",
     "rechart": "^0.0.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
