--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "^7.16.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
@@ -48,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
     "react-router": "^6.4.3",
+    "react-router-dom": "^6.4.3",
     "rechart": "^0.0.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
